added bowl images for each step

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       <p>Choose between <span>sushi rice</span>, <span>brown rice</span>, <span>mixed greens</span>, & <span>chilled yam noodles</span>.</p>
       <img src="img/sushirice.jpg" alt="Sushi rice - base">
     </div>
+  </section>
 
 
 </body>
