--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 </head>
 <body>
 
+
   <!-- **************** Home Page Header ***************** -->
-  <section id="home-header" class="pages">
+  <section id="home-header">
     <div id="front-page">
-      <img src="img/logo.png" alt="Poke Poke Fish Bar logo" >
+      <img src="img/whitelogo.png" alt="Poke Poke Fish Bar logo" >
       <br>
       <nav id="main-nav">
         <a href="#">Home</a>
@@ -26,18 +27,102 @@
       </a>
     </div>
   </section>
+  <!-- END OF SECTION -->
+
 
 
   <!-- ************** "Create your own bowl" - STEPS ************** -->
   <section id="bowl-creation" class="pages">
     <h2><span>Create your own bowl</span> in four easy steps!</h2>
-    <div class="odd-step steps">
+
+    <div class="steps clearfix">
       <h4>1</h4>
-      <h5>PICK YOUR FOUNDATION</h5>
-      <p>Choose between <span>sushi rice</span>, <span>brown rice</span>, <span>mixed greens</span>, & <span>chilled yam noodles</span>.</p>
+      <div class="step-text">
+        <h5>PICK YOUR FOUNDATION</h5>
+        <p>Etiam adipiscing, purus ultricies ornare vulputate, quam felis commodo nisl, ut posuere massa turpis ut erat. Etiam risus neque</p>
+      </div>
       <img src="img/sushirice.jpg" alt="Sushi rice - base">
     </div>
+
+    <div class="steps clearfix">
+      <h4>2</h4>
+      <div class="step-text">
+        <h5>CHOOSE YOUR FISH</h5>
+        <p>Edit me please!</p>
+      </div>
+      <img src="img/sushirice.jpg" alt="Sushi rice - base">
+    </div>
+
+    <div class="steps clearfix">
+      <h4>3</h4>
+      <div class="step-text">
+        <h5>SAUCE IT UP</h5>
+        <p>Edit me please!</p>
+      </div>
+      <img src="img/sushirice.jpg" alt="Sushi rice - base">
+    </div>
+
+    <div class="steps clearfix">
+      <h4>4</h4>
+      <div class="step-text">
+        <h5>TOP IT OFF</h5>
+        <p>Edit me please!</p>
+      </div>
+      <img src="img/sushirice.jpg" alt="Sushi rice - base">
+    </div>
+
+    <a class="page-down" href="#events">
+        <i class="fa fa-arrow-down" aria-hidden="true"></i>
+      </a>
+
   </section>
+  <!-- END OF SECTION -->
+
+
+
+  <!-- ************** HOTTEST EVENTS ******************* -->
+  <section id="events" class="pages">
+    <p>[ Event's Section ]<br>Intentionally left blank</p>
+  </section>
+  <!-- END OF SECTION -->
+
+
+
+  <!-- ************* LOCATION ************************ -->
+  <section id="location">
+    
+    <div id="location-info">
+      <h4>Location</h4>
+      <address>2362 El Camino Real
+      <br>
+      Santa Clara, CA 95050</address>
+      <h4>Contact Number</h4>
+      <p>(408) 244-2110</p>
+    </div>
+
+    <div id="location-map">
+      <script src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script><div style='overflow:hidden;height:500px;width:100%;'><div id='gmap_canvas' style='height:500px;width:100%;'></div><div><small><a href="http://www.embedgooglemaps.com/en/">Generate your map here, quick and easy!                  Give your customers directions                  Get found</a></small></div><div><small><a href="https://top10geeks.com/top-10-best-anti-aging-products-2016/">Top 10 anti-aging products of 2016</a></small></div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style></div><script type='text/javascript'>function init_map(){var myOptions = {zoom:13,center:new google.maps.LatLng(37.3520872,-121.96738240000002),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById('gmap_canvas'), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(37.3520872,-121.96738240000002)});infowindow = new google.maps.InfoWindow({content:'<strong>Poke Poke Fish Bar</strong><br>2362 El Camino Real, Santa Clara, CA 95050<br>'});google.maps.event.addListener(marker, 'click', function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
+    </div>
+
+    <div id="social">
+      <h2>Follow Us!</h2>
+      <nav>
+        <a href="#" id="facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+        <a href="#" id="instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+        <a href="#" id="twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+        <a href="#" id="yelp"><i class="fa fa-yelp" aria-hidden="true"></i></a>
+      </nav>
+    </div>
+
+    <footer>
+      <sub>&copy; Copyright 2016 Poke Poke Fish Bar. 
+      <a href="#">Business Statement</a> | 
+      <a href="#">Privacy Policy</a> | 
+      <a href="#">Careers</a></sub>
+    </footer>
+
+  </section>
+  <!-- END OF SECTION -->
 
 
 </body>
